// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should show ExpenseSummary component with multiple expenses. 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       with a total of 
      <span>
        $12,345.67
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/add"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should show ExpenseSummary component with one expense. 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       with a total of 
      <span>
        $1.23
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/add"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
